...
    MERCHANT,
}

enum class AnalysisTimePeriod {
    WEEK,
    MONTH,
    YEAR,
    ALL_TIME,
    CUSTOM,
}

enum class AnalysisTransactionType {
    EXPENSE,
...
